# AKE-scanner

./: .gitignore  README.md  ake-scan  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
docs/assets/: app.js  catalog.js  style.css  worker.js
docs/assets/js/: catalog-ui.js  config.js  export.js  modulus.js  progress.js  results.js  runtime.js  scan.js  share.js  state.js  util.js
docs/py/: README.txt
docs/py/ake_scanner/: __init__.py  cli.py
docs/py/ake_scanner/algebra/: __init__.py  hensel.py  laurent.py
docs/py/ake_scanner/logic/: __init__.py  asymptotic.py  diagnose.py  scanner.py  verdict.py
docs/py/examples/: advanced_sentences.py  demo_hensel.py
examples/: advanced_sentences.py  demo_hensel.py
scripts/: sync_web_py.sh
src/: cli.py
src/ake_scanner/: __init__.py  __main__.py  cli.py  predicates.py  reporting.py
src/ake_scanner/logic/: __init__.py  asymptotic.py  primes.py  scanner.py
src/algebra/: laurent.py
src/logic/: scanner.py
tests/: _pathsetup.py  test_algebra.py  test_field_axioms.py  test_hensel.py  test_logic.py  test_sentences.py  test_stress.py  test_tonelli.py  test_verdict.py
